--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,14 @@ services:
       POSTGRES_PASSWORD: pass123!
     ports:
       - "5432:5432"
- modgodb-example:
-   image: 'mongo'
-   container_name: 'mongodb-anatoliy'
-   environment:
-     - MONGO_INITDB_DATABASE=mongo_db_anatoliy
-     - MONGO_INITDB_ROOT_USERNAME=anatoliy
-     - MONGO_INITDB_ROOT_PASSWORD=password
-   ports:
-     - '27017:27017'
+    volumes:
+    - /opt/education/postgresql:/var/lib/postgresql/data
+# modgodb-example:
+#   image: 'mongo'
+#   container_name: 'mongodb-anatoliy'
+#   environment:
+#     - MONGO_INITDB_DATABASE=mongo_db_anatoliy
+#     - MONGO_INITDB_ROOT_USERNAME=anatoliy
+#     - MONGO_INITDB_ROOT_PASSWORD=password
+#   ports:
+#     - '27017:27017'
